chore: refactor api method params schema builder

--- a/docs/api/v1.md
+++ b/docs/api/v1.md
@@ -2003,11 +2003,11 @@ curl \
                 },
                 {
                     "type": "array",
-                    "item": {
+                    "items": {
                         "type": "string",
                         "format": "locale"
                     },
-                    "uniqueItem": true
+                    "uniqueItems": true
                 }
             ]
         },
@@ -2053,10 +2053,10 @@ properties:
     anyOf:
       - type: "null"
       - type: array
-        item:
+        items:
           type: string
           format: locale
-        uniqueItem: true
+        uniqueItems: true
   defaultLocale:
     anyOf:
       - type: "null"
