--- a/docs/rpc/v1.md
+++ b/docs/rpc/v1.md
@@ -139,14 +139,14 @@ type: string
 
 ## Nginx
 
-### Add nginx proxies
+### Get TLS certificates
 
 <!-- tabs:start -->
 
 #### **JavaScript**
 
 ```javascript
-const res = await api.call( "/v1/nginx/add-proxies", proxies );
+const res = await api.call( "/v1/nginx/get-certificates", server_names );
 ```
 
 #### **Shell**
@@ -154,12 +154,106 @@ const res = await api.call( "/v1/nginx/add-proxies", proxies );
 ```shell
 curl \
     -H "Authorization: Bearer <YOUR-API-TOKEN>" \
-    "http://localhost/api/v1/nginx/add-proxies"
+    "http://localhost/api/v1/nginx/get-certificates"
 ```
 
 <!-- tabs:end -->
 
-- `proxies` {Object}
+- `server_names`
+
+<details>
+    <summary>JSON schema</summary>
+
+<!-- tabs:start -->
+
+#### **JSON**
+
+```json
+{
+    "anyOf": [
+        {
+            "type": "string",
+            "format": "nginx-server-name"
+        },
+        {
+            "type": "array",
+            "items": {
+                "type": "string",
+                "format": "nginx-server-name"
+            },
+            "minItems": 1,
+            "uniqueItems": true
+        }
+    ]
+}
+```
+
+#### **YAML**
+
+```yaml
+anyOf:
+  - type: string
+    format: nginx-server-name
+  - type: array
+    items:
+      type: string
+      format: nginx-server-name
+    minItems: 1
+    uniqueItems: true
+```
+
+<!-- tabs:end -->
+
+</details>
+
+### Add nginx proxy
+
+<!-- tabs:start -->
+
+#### **JavaScript**
+
+```javascript
+const res = await api.call( "/v1/nginx/add-proxy", proxy_id, proxy_options );
+```
+
+#### **Shell**
+
+```shell
+curl \
+    -H "Authorization: Bearer <YOUR-API-TOKEN>" \
+    "http://localhost/api/v1/nginx/add-proxy"
+```
+
+<!-- tabs:end -->
+
+- `proxy_id` {string}
+
+<details>
+    <summary>JSON schema</summary>
+
+<!-- tabs:start -->
+
+#### **JSON**
+
+```json
+{
+    "type": "string",
+    "format": "kebab-case"
+}
+```
+
+#### **YAML**
+
+```yaml
+type: string
+format: kebab-case
+```
+
+<!-- tabs:end -->
+
+</details>
+
+- `proxy_options` {Object}
 
 <details>
     <summary>JSON schema</summary>
@@ -171,113 +265,104 @@ curl \
 ```json
 {
     "type": "object",
-    "propertyNames": {
-        "type": "string",
-        "format": "kebab-case"
-    },
-    "minProperties": 1,
-    "additionalProperties": {
-        "type": "object",
-        "properties": {
-            "upstreamPort": {
-                "type": "integer",
-                "format": "ip-port"
-            },
-            "upstreamProxyProtocol": {
-                "type": "boolean"
-            },
-            "serverNames": {
-                "anyOf": [
-                    {
-                        "type": "null"
-                    },
-                    {
+    "properties": {
+        "upstreamPort": {
+            "type": "integer",
+            "format": "ip-port"
+        },
+        "upstreamProxyProtocol": {
+            "type": "boolean"
+        },
+        "serverNames": {
+            "anyOf": [
+                {
+                    "type": "null"
+                },
+                {
+                    "type": "string",
+                    "format": "nginx-server-name"
+                },
+                {
+                    "type": "array",
+                    "items": {
                         "type": "string",
                         "format": "nginx-server-name"
                     },
-                    {
-                        "type": "array",
-                        "items": {
-                            "type": "string",
-                            "format": "nginx-server-name"
-                        },
-                        "minItems": 1,
-                        "uniqueItems": true
-                    }
-                ]
-            },
-            "servers": {
-                "type": "array",
-                "minItems": 1,
-                "items": {
-                    "type": "object",
-                    "properties": {
-                        "port": {
-                            "type": "integer",
-                            "format": "ip-port"
-                        },
-                        "type": {
-                            "enum": [
-                                "http",
-                                "tcp",
-                                "udp"
-                            ]
-                        },
-                        "proxyProtocol": {
-                            "type": "boolean"
-                        },
-                        "ssl": {
-                            "type": "boolean"
-                        },
-                        "maxBodySize": {
-                            "type": "string",
-                            "format": "digital-size"
-                        },
-                        "cacheEnabled": {
-                            "type": "boolean"
-                        },
-                        "cacheBypass": {
-                            "type": "boolean"
-                        },
-                        "httpsRedirectPort": {
-                            "anyOf": [
-                                {
-                                    "type": "null"
-                                },
-                                {
-                                    "type": "integer",
-                                    "format": "ip-port"
-                                }
-                            ]
-                        },
-                        "hstsMaxAge": {
-                            "anyOf": [
-                                {
-                                    "type": "null"
-                                },
-                                {
-                                    "type": "string",
-                                    "format": "interval"
-                                }
-                            ]
-                        },
-                        "hstsSubdomains": {
-                            "type": "boolean"
-                        }
-                    },
-                    "additionalProperties": false,
-                    "required": [
-                        "port"
-                    ]
+                    "uniqueItems": true
                 }
-            }
+            ]
         },
-        "additionalProperties": false,
-        "required": [
-            "upstreamPort",
-            "servers"
-        ]
-    }
+        "servers": {
+            "type": "array",
+            "minItems": 1,
+            "items": {
+                "type": "object",
+                "properties": {
+                    "port": {
+                        "type": "integer",
+                        "format": "ip-port"
+                    },
+                    "type": {
+                        "enum": [
+                            "http",
+                            "tcp",
+                            "udp"
+                        ]
+                    },
+                    "proxyProtocol": {
+                        "type": "boolean"
+                    },
+                    "ssl": {
+                        "type": "boolean"
+                    },
+                    "maxBodySize": {
+                        "type": "string",
+                        "format": "digital-size"
+                    },
+                    "cacheEnabled": {
+                        "type": "boolean"
+                    },
+                    "cacheBypass": {
+                        "type": "boolean"
+                    },
+                    "httpsRedirectPort": {
+                        "anyOf": [
+                            {
+                                "type": "null"
+                            },
+                            {
+                                "type": "integer",
+                                "format": "ip-port"
+                            }
+                        ]
+                    },
+                    "hstsMaxAge": {
+                        "anyOf": [
+                            {
+                                "type": "null"
+                            },
+                            {
+                                "type": "string",
+                                "format": "interval"
+                            }
+                        ]
+                    },
+                    "hstsSubdomains": {
+                        "type": "boolean"
+                    }
+                },
+                "additionalProperties": false,
+                "required": [
+                    "port"
+                ]
+            }
+        }
+    },
+    "additionalProperties": false,
+    "required": [
+        "upstreamPort",
+        "servers"
+    ]
 }
 ```
 
@@ -285,73 +370,66 @@ curl \
 
 ```yaml
 type: object
-propertyNames:
-  type: string
-  format: kebab-case
-minProperties: 1
-additionalProperties:
-  type: object
-  properties:
-    upstreamPort:
-      type: integer
-      format: ip-port
-    upstreamProxyProtocol:
-      type: boolean
-    serverNames:
-      anyOf:
-        - type: "null"
-        - type: string
+properties:
+  upstreamPort:
+    type: integer
+    format: ip-port
+  upstreamProxyProtocol:
+    type: boolean
+  serverNames:
+    anyOf:
+      - type: "null"
+      - type: string
+        format: nginx-server-name
+      - type: array
+        items:
+          type: string
           format: nginx-server-name
-        - type: array
-          items:
-            type: string
-            format: nginx-server-name
-          minItems: 1
-          uniqueItems: true
-    servers:
-      type: array
-      minItems: 1
-      items:
-        type: object
-        properties:
-          port:
-            type: integer
-            format: ip-port
-          type:
-            enum:
-              - http
-              - tcp
-              - udp
-          proxyProtocol:
-            type: boolean
-          ssl:
-            type: boolean
-          maxBodySize:
-            type: string
-            format: digital-size
-          cacheEnabled:
-            type: boolean
-          cacheBypass:
-            type: boolean
-          httpsRedirectPort:
-            anyOf:
-              - type: "null"
-              - type: integer
-                format: ip-port
-          hstsMaxAge:
-            anyOf:
-              - type: "null"
-              - type: string
-                format: interval
-          hstsSubdomains:
-            type: boolean
-        additionalProperties: false
-        required:
-          - port
-  additionalProperties: false
-  required:
-    - upstreamPort
-    - servers
+        uniqueItems: true
+  servers:
+    type: array
+    minItems: 1
+    items:
+      type: object
+      properties:
+        port:
+          type: integer
+          format: ip-port
+        type:
+          enum:
+            - http
+            - tcp
+            - udp
+        proxyProtocol:
+          type: boolean
+        ssl:
+          type: boolean
+        maxBodySize:
+          type: string
+          format: digital-size
+        cacheEnabled:
+          type: boolean
+        cacheBypass:
+          type: boolean
+        httpsRedirectPort:
+          anyOf:
+            - type: "null"
+            - type: integer
+              format: ip-port
+        hstsMaxAge:
+          anyOf:
+            - type: "null"
+            - type: string
+              format: interval
+        hstsSubdomains:
+          type: boolean
+      additionalProperties: false
+      required:
+        - port
+additionalProperties: false
+required:
+  - upstreamPort
+  - servers
 ```
 
 <!-- tabs:end -->
@@ -377,6 +455,213 @@ curl \
 ```
 
 <!-- tabs:end -->
+
+### Set server names
+
+<!-- tabs:start -->
+
+#### **JavaScript**
+
+```javascript
+const res = await api.call( "/v1/nginx/set-server-names", server_names );
+```
+
+#### **Shell**
+
+```shell
+curl \
+    -H "Authorization: Bearer <YOUR-API-TOKEN>" \
+    "http://localhost/api/v1/nginx/set-server-names"
+```
+
+<!-- tabs:end -->
+
+- `server_names`
+
+<details>
+    <summary>JSON schema</summary>
+
+<!-- tabs:start -->
+
+#### **JSON**
+
+```json
+{
+    "anyOf": [
+        {
+            "type": "null"
+        },
+        {
+            "type": "string",
+            "format": "nginx-server-name"
+        },
+        {
+            "type": "array",
+            "items": {
+                "type": "string",
+                "format": "nginx-server-name"
+            },
+            "uniqueItems": true
+        }
+    ]
+}
+```
+
+#### **YAML**
+
+```yaml
+anyOf:
+  - type: "null"
+  - type: string
+    format: nginx-server-name
+  - type: array
+    items:
+      type: string
+      format: nginx-server-name
+    uniqueItems: true
+```
+
+<!-- tabs:end -->
+
+</details>
+
+### Add server names
+
+<!-- tabs:start -->
+
+#### **JavaScript**
+
+```javascript
+const res = await api.call( "/v1/nginx/add-server-names", server_names );
+```
+
+#### **Shell**
+
+```shell
+curl \
+    -H "Authorization: Bearer <YOUR-API-TOKEN>" \
+    "http://localhost/api/v1/nginx/add-server-names"
+```
+
+<!-- tabs:end -->
+
+- `server_names`
+
+<details>
+    <summary>JSON schema</summary>
+
+<!-- tabs:start -->
+
+#### **JSON**
+
+```json
+{
+    "anyOf": [
+        {
+            "type": "null"
+        },
+        {
+            "type": "string",
+            "format": "nginx-server-name"
+        },
+        {
+            "type": "array",
+            "items": {
+                "type": "string",
+                "format": "nginx-server-name"
+            },
+            "uniqueItems": true
+        }
+    ]
+}
+```
+
+#### **YAML**
+
+```yaml
+anyOf:
+  - type: "null"
+  - type: string
+    format: nginx-server-name
+  - type: array
+    items:
+      type: string
+      format: nginx-server-name
+    uniqueItems: true
+```
+
+<!-- tabs:end -->
+
+</details>
+
+### Delete server names
+
+<!-- tabs:start -->
+
+#### **JavaScript**
+
+```javascript
+const res = await api.call( "/v1/nginx/delete-server-names", server_names );
+```
+
+#### **Shell**
+
+```shell
+curl \
+    -H "Authorization: Bearer <YOUR-API-TOKEN>" \
+    "http://localhost/api/v1/nginx/delete-server-names"
+```
+
+<!-- tabs:end -->
+
+- `server_names`
+
+<details>
+    <summary>JSON schema</summary>
+
+<!-- tabs:start -->
+
+#### **JSON**
+
+```json
+{
+    "anyOf": [
+        {
+            "type": "null"
+        },
+        {
+            "type": "string",
+            "format": "nginx-server-name"
+        },
+        {
+            "type": "array",
+            "items": {
+                "type": "string",
+                "format": "nginx-server-name"
+            },
+            "uniqueItems": true
+        }
+    ]
+}
+```
+
+#### **YAML**
+
+```yaml
+anyOf:
+  - type: "null"
+  - type: string
+    format: nginx-server-name
+  - type: array
+    items:
+      type: string
+      format: nginx-server-name
+    uniqueItems: true
+```
+
+<!-- tabs:end -->
+
+</details>
 
 ## Test
 
