--- a/docs/api/v1.md
+++ b/docs/api/v1.md
@@ -1735,16 +1735,16 @@ type: string
                 "oauth_code": {
                     "type": "string"
                 },
-                "oauth_redirect_uri": {
+                "oauth_redirect_url": {
                     "type": "string",
-                    "format": "uri"
+                    "format": "url"
                 }
             },
             "additionalProperties": false,
             "required": [
                 "oauth_provider",
                 "oauth_code",
-                "oauth_redirect_uri"
+                "oauth_redirect_url"
             ]
         }
     ]
@@ -1771,14 +1771,14 @@ anyOf:
           - github
       oauth_code:
         type: string
-      oauth_redirect_uri:
+      oauth_redirect_url:
         type: string
-        format: uri
+        format: url
     additionalProperties: false
     required:
       - oauth_provider
       - oauth_code
-      - oauth_redirect_uri
+      - oauth_redirect_url
 ```
 
 <!-- tabs:end -->
@@ -2158,16 +2158,16 @@ curl \
                 "oauth_code": {
                     "type": "string"
                 },
-                "oauth_redirect_uri": {
+                "oauth_redirect_url": {
                     "type": "string",
-                    "format": "uri"
+                    "format": "url"
                 }
             },
             "additionalProperties": false,
             "required": [
                 "oauth_provider",
                 "oauth_code",
-                "oauth_redirect_uri"
+                "oauth_redirect_url"
             ]
         }
     ]
@@ -2198,14 +2198,14 @@ anyOf:
           - github
       oauth_code:
         type: string
-      oauth_redirect_uri:
+      oauth_redirect_url:
         type: string
-        format: uri
+        format: url
     additionalProperties: false
     required:
       - oauth_provider
       - oauth_code
-      - oauth_redirect_uri
+      - oauth_redirect_url
 ```
 
 <!-- tabs:end -->
@@ -2271,16 +2271,16 @@ curl \
                 "oauth_code": {
                     "type": "string"
                 },
-                "oauth_redirect_uri": {
+                "oauth_redirect_url": {
                     "type": "string",
-                    "format": "uri"
+                    "format": "url"
                 }
             },
             "additionalProperties": false,
             "required": [
                 "oauth_provider",
                 "oauth_code",
-                "oauth_redirect_uri"
+                "oauth_redirect_url"
             ]
         }
     ]
@@ -2307,14 +2307,14 @@ anyOf:
           - github
       oauth_code:
         type: string
-      oauth_redirect_uri:
+      oauth_redirect_url:
         type: string
-        format: uri
+        format: url
     additionalProperties: false
     required:
       - oauth_provider
       - oauth_code
-      - oauth_redirect_uri
+      - oauth_redirect_url
 ```
 
 <!-- tabs:end -->
@@ -2394,16 +2394,16 @@ curl \
                 "oauth_code": {
                     "type": "string"
                 },
-                "oauth_redirect_uri": {
+                "oauth_redirect_url": {
                     "type": "string",
-                    "format": "uri"
+                    "format": "url"
                 }
             },
             "additionalProperties": false,
             "required": [
                 "oauth_provider",
                 "oauth_code",
-                "oauth_redirect_uri"
+                "oauth_redirect_url"
             ]
         }
     ]
@@ -2425,14 +2425,14 @@ anyOf:
           - github
       oauth_code:
         type: string
-      oauth_redirect_uri:
+      oauth_redirect_url:
         type: string
-        format: uri
+        format: url
     additionalProperties: false
     required:
       - oauth_provider
       - oauth_code
-      - oauth_redirect_uri
+      - oauth_redirect_url
 ```
 
 <!-- tabs:end -->
