--- a/docs/rpc/v1.md
+++ b/docs/rpc/v1.md
@@ -27,6 +27,51 @@ const api = new Api( "http://localhost/api/" );
 
 ## Administration
 
+### Reset root user password
+
+<!-- tabs:start -->
+
+#### **JavaScript**
+
+```javascript
+const res = await api.call( "/v1/administration/reset-root-password", password? );
+```
+
+#### **Shell**
+
+```sh
+curl \
+    -H "Authorization: Bearer <YOUR-API-TOKEN>" \
+    "http://localhost/api/v1/administration/reset-root-password"
+```
+
+<!-- tabs:end -->
+
+- `password?` {string}
+
+<details>
+    <summary>JSON schema</summary>
+
+<!-- tabs:start -->
+
+#### **JSON**
+
+```json
+{
+    "type": "string"
+}
+```
+
+#### **YAML**
+
+```yaml
+type: string
+```
+
+<!-- tabs:end -->
+
+</details>
+
 ### Revoke current encryption key
 
 <!-- tabs:start -->
@@ -68,51 +113,6 @@ curl \
 <!-- tabs:end -->
 
 - `master_key?` {string}
-
-<details>
-    <summary>JSON schema</summary>
-
-<!-- tabs:start -->
-
-#### **JSON**
-
-```json
-{
-    "type": "string"
-}
-```
-
-#### **YAML**
-
-```yaml
-type: string
-```
-
-<!-- tabs:end -->
-
-</details>
-
-### Reset root user password
-
-<!-- tabs:start -->
-
-#### **JavaScript**
-
-```javascript
-const res = await api.call( "/v1/administration/reset-root-password", password? );
-```
-
-#### **Shell**
-
-```sh
-curl \
-    -H "Authorization: Bearer <YOUR-API-TOKEN>" \
-    "http://localhost/api/v1/administration/reset-root-password"
-```
-
-<!-- tabs:end -->
-
-- `password?` {string}
 
 <details>
     <summary>JSON schema</summary>
@@ -206,14 +206,14 @@ anyOf:
 
 </details>
 
-### Add nginx proxy
+### Update nginx proxies
 
 <!-- tabs:start -->
 
 #### **JavaScript**
 
 ```javascript
-const res = await api.call( "/v1/nginx/add-proxy", proxy_id, proxy_options );
+const res = await api.call( "/v1/nginx/update-proxies", app_name, app_service_name, update_id, proxies? );
 ```
 
 #### **Shell**
@@ -221,12 +221,12 @@ const res = await api.call( "/v1/nginx/add-proxy", proxy_id, proxy_options );
 ```sh
 curl \
     -H "Authorization: Bearer <YOUR-API-TOKEN>" \
-    "http://localhost/api/v1/nginx/add-proxy"
+    "http://localhost/api/v1/nginx/update-proxies"
 ```
 
 <!-- tabs:end -->
 
-- `proxy_id` {string}
+- `app_name` {string}
 
 <details>
     <summary>JSON schema</summary>
@@ -253,7 +253,7 @@ format: kebab-case
 
 </details>
 
-- `proxy_options` {Object}
+- `app_service_name` {string}
 
 <details>
     <summary>JSON schema</summary>
@@ -264,104 +264,170 @@ format: kebab-case
 
 ```json
 {
-    "type": "object",
-    "properties": {
-        "upstreamPort": {
-            "type": "integer",
-            "format": "ip-port"
+    "type": "string",
+    "format": "kebab-case"
+}
+```
+
+#### **YAML**
+
+```yaml
+type: string
+format: kebab-case
+```
+
+<!-- tabs:end -->
+
+</details>
+
+- `update_id` {integer}
+
+<details>
+    <summary>JSON schema</summary>
+
+<!-- tabs:start -->
+
+#### **JSON**
+
+```json
+{
+    "type": "integer"
+}
+```
+
+#### **YAML**
+
+```yaml
+type: integer
+```
+
+<!-- tabs:end -->
+
+</details>
+
+- `proxies?`
+
+<details>
+    <summary>JSON schema</summary>
+
+<!-- tabs:start -->
+
+#### **JSON**
+
+```json
+{
+    "anyOf": [
+        {
+            "type": "null"
         },
-        "upstreamProxyProtocol": {
-            "type": "boolean"
-        },
-        "serverNames": {
-            "anyOf": [
-                {
-                    "type": "null"
-                },
-                {
-                    "type": "string",
-                    "format": "nginx-server-name"
-                },
-                {
-                    "type": "array",
-                    "items": {
-                        "type": "string",
-                        "format": "nginx-server-name"
-                    },
-                    "uniqueItems": true
-                }
-            ]
-        },
-        "servers": {
-            "type": "array",
-            "minItems": 1,
-            "items": {
+        {
+            "type": "object",
+            "propertyNames": {
+                "type": "string",
+                "format": "kebab-case"
+            },
+            "additionalProperties": {
                 "type": "object",
                 "properties": {
-                    "port": {
+                    "upstreamPort": {
                         "type": "integer",
                         "format": "ip-port"
                     },
-                    "type": {
-                        "enum": [
-                            "http",
-                            "tcp",
-                            "udp"
-                        ]
-                    },
-                    "proxyProtocol": {
+                    "upstreamProxyProtocol": {
                         "type": "boolean"
                     },
-                    "ssl": {
-                        "type": "boolean"
-                    },
-                    "maxBodySize": {
-                        "type": "string",
-                        "format": "digital-size"
-                    },
-                    "cacheEnabled": {
-                        "type": "boolean"
-                    },
-                    "cacheBypass": {
-                        "type": "boolean"
-                    },
-                    "httpsRedirectPort": {
-                        "anyOf": [
-                            {
-                                "type": "null"
-                            },
-                            {
-                                "type": "integer",
-                                "format": "ip-port"
-                            }
-                        ]
-                    },
-                    "hstsMaxAge": {
+                    "serverNames": {
                         "anyOf": [
                             {
                                 "type": "null"
                             },
                             {
                                 "type": "string",
-                                "format": "interval"
+                                "format": "nginx-server-name"
+                            },
+                            {
+                                "type": "array",
+                                "items": {
+                                    "type": "string",
+                                    "format": "nginx-server-name"
+                                },
+                                "uniqueItems": true
                             }
                         ]
                     },
-                    "hstsSubdomains": {
-                        "type": "boolean"
+                    "servers": {
+                        "type": "array",
+                        "minItems": 1,
+                        "items": {
+                            "type": "object",
+                            "properties": {
+                                "port": {
+                                    "type": "integer",
+                                    "format": "ip-port"
+                                },
+                                "type": {
+                                    "enum": [
+                                        "http",
+                                        "tcp",
+                                        "udp"
+                                    ]
+                                },
+                                "proxyProtocol": {
+                                    "type": "boolean"
+                                },
+                                "ssl": {
+                                    "type": "boolean"
+                                },
+                                "maxBodySize": {
+                                    "type": "string",
+                                    "format": "digital-size"
+                                },
+                                "cacheEnabled": {
+                                    "type": "boolean"
+                                },
+                                "cacheBypass": {
+                                    "type": "boolean"
+                                },
+                                "httpsRedirectPort": {
+                                    "anyOf": [
+                                        {
+                                            "type": "null"
+                                        },
+                                        {
+                                            "type": "integer",
+                                            "format": "ip-port"
+                                        }
+                                    ]
+                                },
+                                "hstsMaxAge": {
+                                    "anyOf": [
+                                        {
+                                            "type": "null"
+                                        },
+                                        {
+                                            "type": "string",
+                                            "format": "interval"
+                                        }
+                                    ]
+                                },
+                                "hstsSubdomains": {
+                                    "type": "boolean"
+                                }
+                            },
+                            "additionalProperties": false,
+                            "required": [
+                                "port"
+                            ]
+                        }
                     }
                 },
                 "additionalProperties": false,
                 "required": [
-                    "port"
+                    "upstreamPort",
+                    "servers"
                 ]
             }
         }
-    },
-    "additionalProperties": false,
-    "required": [
-        "upstreamPort",
-        "servers"
     ]
 }
 ```
@@ -369,294 +435,74 @@ format: kebab-case
 #### **YAML**
 
 ```yaml
-type: object
-properties:
-  upstreamPort:
-    type: integer
-    format: ip-port
-  upstreamProxyProtocol:
-    type: boolean
-  serverNames:
-    anyOf:
-      - type: "null"
-      - type: string
-        format: nginx-server-name
-      - type: array
-        items:
-          type: string
-          format: nginx-server-name
-        uniqueItems: true
-  servers:
-    type: array
-    minItems: 1
-    items:
+anyOf:
+  - type: "null"
+  - type: object
+    propertyNames:
+      type: string
+      format: kebab-case
+    additionalProperties:
       type: object
       properties:
-        port:
+        upstreamPort:
           type: integer
           format: ip-port
-        type:
-          enum:
-            - http
-            - tcp
-            - udp
-        proxyProtocol:
+        upstreamProxyProtocol:
           type: boolean
-        ssl:
-          type: boolean
-        maxBodySize:
-          type: string
-          format: digital-size
-        cacheEnabled:
-          type: boolean
-        cacheBypass:
-          type: boolean
-        httpsRedirectPort:
-          anyOf:
-            - type: "null"
-            - type: integer
-              format: ip-port
-        hstsMaxAge:
+        serverNames:
           anyOf:
             - type: "null"
             - type: string
-              format: interval
-        hstsSubdomains:
-          type: boolean
+              format: nginx-server-name
+            - type: array
+              items:
+                type: string
+                format: nginx-server-name
+              uniqueItems: true
+        servers:
+          type: array
+          minItems: 1
+          items:
+            type: object
+            properties:
+              port:
+                type: integer
+                format: ip-port
+              type:
+                enum:
+                  - http
+                  - tcp
+                  - udp
+              proxyProtocol:
+                type: boolean
+              ssl:
+                type: boolean
+              maxBodySize:
+                type: string
+                format: digital-size
+              cacheEnabled:
+                type: boolean
+              cacheBypass:
+                type: boolean
+              httpsRedirectPort:
+                anyOf:
+                  - type: "null"
+                  - type: integer
+                    format: ip-port
+              hstsMaxAge:
+                anyOf:
+                  - type: "null"
+                  - type: string
+                    format: interval
+              hstsSubdomains:
+                type: boolean
+            additionalProperties: false
+            required:
+              - port
       additionalProperties: false
       required:
-        - port
-additionalProperties: false
-required:
-  - upstreamPort
-  - servers
-```
-
-<!-- tabs:end -->
-
-</details>
-
-### Delete nginx proxy upstream
-
-<!-- tabs:start -->
-
-#### **JavaScript**
-
-```javascript
-const res = await api.call( "/v1/nginx/delete-upstream" );
-```
-
-#### **Shell**
-
-```sh
-curl \
-    -H "Authorization: Bearer <YOUR-API-TOKEN>" \
-    "http://localhost/api/v1/nginx/delete-upstream"
-```
-
-<!-- tabs:end -->
-
-### Set server names
-
-<!-- tabs:start -->
-
-#### **JavaScript**
-
-```javascript
-const res = await api.call( "/v1/nginx/set-server-names", server_names );
-```
-
-#### **Shell**
-
-```sh
-curl \
-    -H "Authorization: Bearer <YOUR-API-TOKEN>" \
-    "http://localhost/api/v1/nginx/set-server-names"
-```
-
-<!-- tabs:end -->
-
-- `server_names`
-
-<details>
-    <summary>JSON schema</summary>
-
-<!-- tabs:start -->
-
-#### **JSON**
-
-```json
-{
-    "anyOf": [
-        {
-            "type": "null"
-        },
-        {
-            "type": "string",
-            "format": "nginx-server-name"
-        },
-        {
-            "type": "array",
-            "items": {
-                "type": "string",
-                "format": "nginx-server-name"
-            },
-            "uniqueItems": true
-        }
-    ]
-}
-```
-
-#### **YAML**
-
-```yaml
-anyOf:
-  - type: "null"
-  - type: string
-    format: nginx-server-name
-  - type: array
-    items:
-      type: string
-      format: nginx-server-name
-    uniqueItems: true
-```
-
-<!-- tabs:end -->
-
-</details>
-
-### Add server names
-
-<!-- tabs:start -->
-
-#### **JavaScript**
-
-```javascript
-const res = await api.call( "/v1/nginx/add-server-names", server_names );
-```
-
-#### **Shell**
-
-```sh
-curl \
-    -H "Authorization: Bearer <YOUR-API-TOKEN>" \
-    "http://localhost/api/v1/nginx/add-server-names"
-```
-
-<!-- tabs:end -->
-
-- `server_names`
-
-<details>
-    <summary>JSON schema</summary>
-
-<!-- tabs:start -->
-
-#### **JSON**
-
-```json
-{
-    "anyOf": [
-        {
-            "type": "null"
-        },
-        {
-            "type": "string",
-            "format": "nginx-server-name"
-        },
-        {
-            "type": "array",
-            "items": {
-                "type": "string",
-                "format": "nginx-server-name"
-            },
-            "uniqueItems": true
-        }
-    ]
-}
-```
-
-#### **YAML**
-
-```yaml
-anyOf:
-  - type: "null"
-  - type: string
-    format: nginx-server-name
-  - type: array
-    items:
-      type: string
-      format: nginx-server-name
-    uniqueItems: true
-```
-
-<!-- tabs:end -->
-
-</details>
-
-### Delete server names
-
-<!-- tabs:start -->
-
-#### **JavaScript**
-
-```javascript
-const res = await api.call( "/v1/nginx/delete-server-names", server_names );
-```
-
-#### **Shell**
-
-```sh
-curl \
-    -H "Authorization: Bearer <YOUR-API-TOKEN>" \
-    "http://localhost/api/v1/nginx/delete-server-names"
-```
-
-<!-- tabs:end -->
-
-- `server_names`
-
-<details>
-    <summary>JSON schema</summary>
-
-<!-- tabs:start -->
-
-#### **JSON**
-
-```json
-{
-    "anyOf": [
-        {
-            "type": "null"
-        },
-        {
-            "type": "string",
-            "format": "nginx-server-name"
-        },
-        {
-            "type": "array",
-            "items": {
-                "type": "string",
-                "format": "nginx-server-name"
-            },
-            "uniqueItems": true
-        }
-    ]
-}
-```
-
-#### **YAML**
-
-```yaml
-anyOf:
-  - type: "null"
-  - type: string
-    format: nginx-server-name
-  - type: array
-    items:
-      type: string
-      format: nginx-server-name
-    uniqueItems: true
+        - upstreamPort
+        - servers
 ```
 
 <!-- tabs:end -->
