--- a/docs/rpc/v1.md
+++ b/docs/rpc/v1.md
@@ -10,7 +10,7 @@
 #### **WebSockets**
 
 ```javascript
-import Api from "@softvisio/core/api";
+import Api from "@c0rejs/core/api";
 
 const api = new Api( "ws://localhost/api/" );
 ```
@@ -18,12 +18,81 @@ const api = new Api( "ws://localhost/api/" );
 #### **HTTP**
 
 ```javascript
-import Api from "@softvisio/core/api";
+import Api from "@c0rejs/core/api";
 
 const api = new Api( "http://localhost/api/" );
 ```
 
 <!-- tabs:end -->
+
+## PostgreSQL
+
+### Get WAL file
+
+<!-- tabs:start -->
+
+#### **JavaScript**
+
+```javascript
+const res = await api.call( "/v1/postgresql/get-wal", server_names );
+```
+
+#### **Shell**
+
+```sh
+curl \
+    -H "Authorization: Bearer <YOUR-API-TOKEN>" \
+    "http://localhost/api/v1/postgresql/get-wal"
+```
+
+<!-- tabs:end -->
+
+- `server_names`
+
+<details>
+    <summary>JSON schema</summary>
+
+<!-- tabs:start -->
+
+#### **JSON**
+
+```json
+{
+    "anyOf": [
+        {
+            "type": "string",
+            "format": "nginx-server-name"
+        },
+        {
+            "type": "array",
+            "items": {
+                "type": "string",
+                "format": "nginx-server-name"
+            },
+            "minItems": 1,
+            "uniqueItems": true
+        }
+    ]
+}
+```
+
+#### **YAML**
+
+```yaml
+anyOf:
+  - type: string
+    format: nginx-server-name
+  - type: array
+    items:
+      type: string
+      format: nginx-server-name
+    minItems: 1
+    uniqueItems: true
+```
+
+<!-- tabs:end -->
+
+</details>
 
 ## Administration
 
@@ -137,16 +206,16 @@ type: string
 
 </details>
 
-## Nginx
+## Storage
 
-### Get TLS certificates
+### Upload file to the storage
 
 <!-- tabs:start -->
 
 #### **JavaScript**
 
 ```javascript
-const res = await api.call( "/v1/nginx/get-certificates", server_names );
+const res = await api.call( "/v1/storage/upload-file", path, file, options? );
 ```
 
 #### **Shell**
@@ -154,12 +223,380 @@ const res = await api.call( "/v1/nginx/get-certificates", server_names );
 ```sh
 curl \
     -H "Authorization: Bearer <YOUR-API-TOKEN>" \
-    "http://localhost/api/v1/nginx/get-certificates"
+    "http://localhost/api/v1/storage/upload-file"
 ```
 
 <!-- tabs:end -->
 
-- `server_names`
+- `path` {string}
+
+<details>
+    <summary>JSON schema</summary>
+
+<!-- tabs:start -->
+
+#### **JSON**
+
+```json
+{
+    "type": "string",
+    "path": {
+        "root": false,
+        "folder": false
+    }
+}
+```
+
+#### **YAML**
+
+```yaml
+type: string
+path:
+  root: false
+  folder: false
+```
+
+<!-- tabs:end -->
+
+</details>
+
+- `file` {File} Maximim file size: `NaN` bytes.
+
+<details>
+    <summary>JSON schema</summary>
+
+<!-- tabs:start -->
+
+#### **JSON**
+
+```json
+{
+    "file": {
+        "maxSize": "50 GB"
+    }
+}
+```
+
+#### **YAML**
+
+```yaml
+file:
+  maxSize: 50 GB
+```
+
+<!-- tabs:end -->
+
+</details>
+
+- `options?` {Object}
+
+<details>
+    <summary>JSON schema</summary>
+
+<!-- tabs:start -->
+
+#### **JSON**
+
+```json
+{
+    "type": "object",
+    "properties": {
+        "cwd": {
+            "type": "string",
+            "path": {
+                "root": true,
+                "folder": false
+            }
+        },
+        "lastModified": {
+            "type": "string",
+            "format": "date-time"
+        },
+        "contentType": {
+            "type": "string"
+        },
+        "cacheControl": {
+            "type": "string"
+        },
+        "contentDisposition": {
+            "type": "string"
+        },
+        "expires": {
+            "type": "string",
+            "format": "date-time"
+        },
+        "maxAge": {
+            "type": "string",
+            "format": "interval"
+        },
+        "inactiveMaxAge": {
+            "type": "string",
+            "format": "interval"
+        },
+        "encrypt": {
+            "type": "boolean"
+        }
+    },
+    "additionalProperties": false
+}
+```
+
+#### **YAML**
+
+```yaml
+type: object
+properties:
+  cwd:
+    type: string
+    path:
+      root: true
+      folder: false
+  lastModified:
+    type: string
+    format: date-time
+  contentType:
+    type: string
+  cacheControl:
+    type: string
+  contentDisposition:
+    type: string
+  expires:
+    type: string
+    format: date-time
+  maxAge:
+    type: string
+    format: interval
+  inactiveMaxAge:
+    type: string
+    format: interval
+  encrypt:
+    type: boolean
+additionalProperties: false
+```
+
+<!-- tabs:end -->
+
+</details>
+
+### Chheck file exists in the storage
+
+<!-- tabs:start -->
+
+#### **JavaScript**
+
+```javascript
+const res = await api.call( "/v1/storage/file-exists", path, options? );
+```
+
+#### **Shell**
+
+```sh
+curl \
+    -H "Authorization: Bearer <YOUR-API-TOKEN>" \
+    "http://localhost/api/v1/storage/file-exists"
+```
+
+<!-- tabs:end -->
+
+- `path` {string}
+
+<details>
+    <summary>JSON schema</summary>
+
+<!-- tabs:start -->
+
+#### **JSON**
+
+```json
+{
+    "type": "string",
+    "path": {
+        "root": false,
+        "folder": false
+    }
+}
+```
+
+#### **YAML**
+
+```yaml
+type: string
+path:
+  root: false
+  folder: false
+```
+
+<!-- tabs:end -->
+
+</details>
+
+- `options?` {Object}
+
+<details>
+    <summary>JSON schema</summary>
+
+<!-- tabs:start -->
+
+#### **JSON**
+
+```json
+{
+    "type": "object",
+    "properties": {
+        "cwd": {
+            "type": "string",
+            "path": {
+                "root": true,
+                "folder": false
+            }
+        },
+        "checkImage": {
+            "type": "boolean"
+        }
+    },
+    "additionalProperties": false
+}
+```
+
+#### **YAML**
+
+```yaml
+type: object
+properties:
+  cwd:
+    type: string
+    path:
+      root: true
+      folder: false
+  checkImage:
+    type: boolean
+additionalProperties: false
+```
+
+<!-- tabs:end -->
+
+</details>
+
+### Get file meta data
+
+<!-- tabs:start -->
+
+#### **JavaScript**
+
+```javascript
+const res = await api.call( "/v1/storage/get-file-metadata", path, options? );
+```
+
+#### **Shell**
+
+```sh
+curl \
+    -H "Authorization: Bearer <YOUR-API-TOKEN>" \
+    "http://localhost/api/v1/storage/get-file-metadata"
+```
+
+<!-- tabs:end -->
+
+- `path` {string}
+
+<details>
+    <summary>JSON schema</summary>
+
+<!-- tabs:start -->
+
+#### **JSON**
+
+```json
+{
+    "type": "string",
+    "path": {
+        "root": false,
+        "folder": false
+    }
+}
+```
+
+#### **YAML**
+
+```yaml
+type: string
+path:
+  root: false
+  folder: false
+```
+
+<!-- tabs:end -->
+
+</details>
+
+- `options?` {Object}
+
+<details>
+    <summary>JSON schema</summary>
+
+<!-- tabs:start -->
+
+#### **JSON**
+
+```json
+{
+    "type": "object",
+    "properties": {
+        "cwd": {
+            "type": "string",
+            "path": {
+                "root": true,
+                "folder": false
+            }
+        },
+        "checkImage": {
+            "type": "boolean"
+        }
+    },
+    "additionalProperties": false
+}
+```
+
+#### **YAML**
+
+```yaml
+type: object
+properties:
+  cwd:
+    type: string
+    path:
+      root: true
+      folder: false
+  checkImage:
+    type: boolean
+additionalProperties: false
+```
+
+<!-- tabs:end -->
+
+</details>
+
+### Search files using glob patterns
+
+<!-- tabs:start -->
+
+#### **JavaScript**
+
+```javascript
+const res = await api.call( "/v1/storage/glob", patterns, options? );
+```
+
+#### **Shell**
+
+```sh
+curl \
+    -H "Authorization: Bearer <YOUR-API-TOKEN>" \
+    "http://localhost/api/v1/storage/glob"
+```
+
+<!-- tabs:end -->
+
+- `patterns`
 
 <details>
     <summary>JSON schema</summary>
@@ -173,16 +610,15 @@ curl \
     "anyOf": [
         {
             "type": "string",
-            "format": "nginx-server-name"
+            "format": "glob-pattern"
         },
         {
             "type": "array",
             "items": {
                 "type": "string",
-                "format": "nginx-server-name"
+                "format": "glob-pattern"
             },
-            "minItems": 1,
-            "uniqueItems": true
+            "minItems": 1
         }
     ]
 }
@@ -193,27 +629,68 @@ curl \
 ```yaml
 anyOf:
   - type: string
-    format: nginx-server-name
+    format: glob-pattern
   - type: array
     items:
       type: string
-      format: nginx-server-name
+      format: glob-pattern
     minItems: 1
-    uniqueItems: true
 ```
 
 <!-- tabs:end -->
 
 </details>
 
-### Update nginx proxies
+- `options?` {Object}
+
+<details>
+    <summary>JSON schema</summary>
+
+<!-- tabs:start -->
+
+#### **JSON**
+
+```json
+{
+    "type": "object",
+    "properties": {
+        "cwd": {
+            "type": "string",
+            "path": {
+                "root": true,
+                "folder": false
+            }
+        }
+    },
+    "additionalProperties": false
+}
+```
+
+#### **YAML**
+
+```yaml
+type: object
+properties:
+  cwd:
+    type: string
+    path:
+      root: true
+      folder: false
+additionalProperties: false
+```
+
+<!-- tabs:end -->
+
+</details>
+
+### Delete files using glob patterns
 
 <!-- tabs:start -->
 
 #### **JavaScript**
 
 ```javascript
-const res = await api.call( "/v1/nginx/update-proxies", app_name, app_service_name, update_id, proxies? );
+const res = await api.call( "/v1/storage/delete-files", patterns, options? );
 ```
 
 #### **Shell**
@@ -221,91 +698,12 @@ const res = await api.call( "/v1/nginx/update-proxies", app_name, app_service_na
 ```sh
 curl \
     -H "Authorization: Bearer <YOUR-API-TOKEN>" \
-    "http://localhost/api/v1/nginx/update-proxies"
+    "http://localhost/api/v1/storage/delete-files"
 ```
 
 <!-- tabs:end -->
 
-- `app_name` {string}
-
-<details>
-    <summary>JSON schema</summary>
-
-<!-- tabs:start -->
-
-#### **JSON**
-
-```json
-{
-    "type": "string",
-    "format": "kebab-case"
-}
-```
-
-#### **YAML**
-
-```yaml
-type: string
-format: kebab-case
-```
-
-<!-- tabs:end -->
-
-</details>
-
-- `app_service_name` {string}
-
-<details>
-    <summary>JSON schema</summary>
-
-<!-- tabs:start -->
-
-#### **JSON**
-
-```json
-{
-    "type": "string",
-    "format": "kebab-case"
-}
-```
-
-#### **YAML**
-
-```yaml
-type: string
-format: kebab-case
-```
-
-<!-- tabs:end -->
-
-</details>
-
-- `update_id` {integer}
-
-<details>
-    <summary>JSON schema</summary>
-
-<!-- tabs:start -->
-
-#### **JSON**
-
-```json
-{
-    "type": "integer"
-}
-```
-
-#### **YAML**
-
-```yaml
-type: integer
-```
-
-<!-- tabs:end -->
-
-</details>
-
-- `proxies?`
+- `patterns`
 
 <details>
     <summary>JSON schema</summary>
@@ -318,115 +716,16 @@ type: integer
 {
     "anyOf": [
         {
-            "type": "null"
+            "type": "string",
+            "format": "glob-pattern"
         },
         {
-            "type": "object",
-            "propertyNames": {
+            "type": "array",
+            "items": {
                 "type": "string",
-                "format": "kebab-case"
+                "format": "glob-pattern"
             },
-            "additionalProperties": {
-                "type": "object",
-                "properties": {
-                    "upstreamPort": {
-                        "type": "integer",
-                        "format": "ip-port"
-                    },
-                    "upstreamProxyProtocol": {
-                        "type": "boolean"
-                    },
-                    "serverNames": {
-                        "anyOf": [
-                            {
-                                "type": "null"
-                            },
-                            {
-                                "type": "string",
-                                "format": "nginx-server-name"
-                            },
-                            {
-                                "type": "array",
-                                "items": {
-                                    "type": "string",
-                                    "format": "nginx-server-name"
-                                },
-                                "uniqueItems": true
-                            }
-                        ]
-                    },
-                    "servers": {
-                        "type": "array",
-                        "minItems": 1,
-                        "items": {
-                            "type": "object",
-                            "properties": {
-                                "port": {
-                                    "type": "integer",
-                                    "format": "ip-port"
-                                },
-                                "type": {
-                                    "enum": [
-                                        "http",
-                                        "tcp",
-                                        "udp"
-                                    ]
-                                },
-                                "proxyProtocol": {
-                                    "type": "boolean"
-                                },
-                                "ssl": {
-                                    "type": "boolean"
-                                },
-                                "maxBodySize": {
-                                    "type": "string",
-                                    "format": "digital-size"
-                                },
-                                "cacheEnabled": {
-                                    "type": "boolean"
-                                },
-                                "cacheBypass": {
-                                    "type": "boolean"
-                                },
-                                "httpsRedirectPort": {
-                                    "anyOf": [
-                                        {
-                                            "type": "null"
-                                        },
-                                        {
-                                            "type": "integer",
-                                            "format": "ip-port"
-                                        }
-                                    ]
-                                },
-                                "hstsMaxAge": {
-                                    "anyOf": [
-                                        {
-                                            "type": "null"
-                                        },
-                                        {
-                                            "type": "string",
-                                            "format": "interval"
-                                        }
-                                    ]
-                                },
-                                "hstsSubdomains": {
-                                    "type": "boolean"
-                                }
-                            },
-                            "additionalProperties": false,
-                            "required": [
-                                "port"
-                            ]
-                        }
-                    }
-                },
-                "additionalProperties": false,
-                "required": [
-                    "upstreamPort",
-                    "servers"
-                ]
-            }
+            "minItems": 1
         }
     ]
 }
@@ -436,73 +735,55 @@ type: integer
 
 ```yaml
 anyOf:
-  - type: "null"
-  - type: object
-    propertyNames:
+  - type: string
+    format: glob-pattern
+  - type: array
+    items:
       type: string
-      format: kebab-case
-    additionalProperties:
-      type: object
-      properties:
-        upstreamPort:
-          type: integer
-          format: ip-port
-        upstreamProxyProtocol:
-          type: boolean
-        serverNames:
-          anyOf:
-            - type: "null"
-            - type: string
-              format: nginx-server-name
-            - type: array
-              items:
-                type: string
-                format: nginx-server-name
-              uniqueItems: true
-        servers:
-          type: array
-          minItems: 1
-          items:
-            type: object
-            properties:
-              port:
-                type: integer
-                format: ip-port
-              type:
-                enum:
-                  - http
-                  - tcp
-                  - udp
-              proxyProtocol:
-                type: boolean
-              ssl:
-                type: boolean
-              maxBodySize:
-                type: string
-                format: digital-size
-              cacheEnabled:
-                type: boolean
-              cacheBypass:
-                type: boolean
-              httpsRedirectPort:
-                anyOf:
-                  - type: "null"
-                  - type: integer
-                    format: ip-port
-              hstsMaxAge:
-                anyOf:
-                  - type: "null"
-                  - type: string
-                    format: interval
-              hstsSubdomains:
-                type: boolean
-            additionalProperties: false
-            required:
-              - port
-      additionalProperties: false
-      required:
-        - upstreamPort
-        - servers
+      format: glob-pattern
+    minItems: 1
+```
+
+<!-- tabs:end -->
+
+</details>
+
+- `options?` {Object}
+
+<details>
+    <summary>JSON schema</summary>
+
+<!-- tabs:start -->
+
+#### **JSON**
+
+```json
+{
+    "type": "object",
+    "properties": {
+        "cwd": {
+            "type": "string",
+            "path": {
+                "root": true,
+                "folder": false
+            }
+        }
+    },
+    "additionalProperties": false
+}
+```
+
+#### **YAML**
+
+```yaml
+type: object
+properties:
+  cwd:
+    type: string
+    path:
+      root: true
+      folder: false
+additionalProperties: false
 ```
 
 <!-- tabs:end -->
