chore: rename c0rejs namespace

--- a/docs/api/v1.md
+++ b/docs/api/v1.md
@@ -10,7 +10,7 @@
 #### **WebSockets**
 
 ```javascript
-import Api from "@c0rejs/core/api";
+import Api from "@corejslib/core/api";
 
 const api = new Api( "wss://localhost/api/" );
 ```
@@ -18,7 +18,7 @@ const api = new Api( "wss://localhost/api/" );
 #### **HTTP**
 
 ```javascript
-import Api from "@c0rejs/core/api";
+import Api from "@corejslib/core/api";
 
 const api = new Api( "https://localhost/api/" );
 ```
@@ -3208,6 +3208,9 @@ curl \
 
 - `options?` {Object}
     - `where` {Object} Set of the filters by field values:
+        - `public` {Array} Filter by the `public` field value:
+            - {string} Filter operator, one of the: `"includes case insensitive"`.
+            - {string} Field value.
         - `name` {Array} Filter by the `name` field value:
             - {string} Filter operator, one of the: `"includes case insensitive"`.
             - {string} Field value.
@@ -3215,7 +3218,7 @@ curl \
             - {string} Filter operator, one of the: `"="`.
             - {boolean} Field value.
     - `order_by` {Array} Array of the sort conditions. **Default:** `[["name","asc"]]`. Each sort condition must be represented with the two-elements {Array} with the following structure:
-        - {string} Field name to sort by, possible fields: `"name"`, `"created"`, `"last_activity"`, `"enabled"`.
+        - {string} Field name to sort by, possible fields: `"public"`, `"name"`, `"created"`, `"last_activity"`, `"enabled"`.
         - {string} Sort direction, can be `"asc"` or `"desc"`. **Default:** `"asc"`.
     - `offset` {integer} Return results, starting from the specified row. `0` - from the first row. **Default:** `0`.
     - `limit` {integer} Max rows to return. Maximum allowed value: `100`. **Default:** `100`.
@@ -3266,6 +3269,11 @@ curl \
             "id": {
                 "type": "string"
             },
+            "public": {
+                "type": "string",
+                "operator": "includes case insensitive",
+                "sortable": true
+            },
             "name": {
                 "type": "string",
                 "operator": "includes case insensitive",
@@ -3305,6 +3313,10 @@ read:
   fields:
     id:
       type: string
+    public:
+      type: string
+      operator: includes case insensitive
+      sortable: true
     name:
       type: string
       operator: includes case insensitive
