--- a/docs/rpc/v1.md
+++ b/docs/rpc/v1.md
@@ -10,7 +10,7 @@
 #### **WebSockets**
 
 ```javascript
-import Api from "@c0rejs/core/api";
+import Api from "@corejslib/core/api";
 
 const api = new Api( "ws://localhost/api/" );
 ```
@@ -18,7 +18,7 @@ const api = new Api( "ws://localhost/api/" );
 #### **HTTP**
 
 ```javascript
-import Api from "@c0rejs/core/api";
+import Api from "@corejslib/core/api";
 
 const api = new Api( "http://localhost/api/" );
 ```
@@ -200,6 +200,398 @@ curl \
 
 ```yaml
 type: string
+```
+
+<!-- tabs:end -->
+
+</details>
+
+## Nginx
+
+### Get TLS certificates
+
+<!-- tabs:start -->
+
+#### **JavaScript**
+
+```javascript
+const res = await api.call( "/v1/nginx/get-certificates", server_names );
+```
+
+#### **Shell**
+
+```sh
+curl \
+    -H "Authorization: Bearer <YOUR-API-TOKEN>" \
+    "http://localhost/api/v1/nginx/get-certificates"
+```
+
+<!-- tabs:end -->
+
+- `server_names`
+
+<details>
+    <summary>JSON schema</summary>
+
+<!-- tabs:start -->
+
+#### **JSON**
+
+```json
+{
+    "anyOf": [
+        {
+            "type": "string",
+            "format": "nginx-server-name"
+        },
+        {
+            "type": "array",
+            "items": {
+                "type": "string",
+                "format": "nginx-server-name"
+            },
+            "minItems": 1,
+            "uniqueItems": true
+        }
+    ]
+}
+```
+
+#### **YAML**
+
+```yaml
+anyOf:
+  - type: string
+    format: nginx-server-name
+  - type: array
+    items:
+      type: string
+      format: nginx-server-name
+    minItems: 1
+    uniqueItems: true
+```
+
+<!-- tabs:end -->
+
+</details>
+
+### Clear nginx cache
+
+<!-- tabs:start -->
+
+#### **JavaScript**
+
+```javascript
+const res = await api.call( "/v1/nginx/clear-cache" );
+```
+
+#### **Shell**
+
+```sh
+curl \
+    -H "Authorization: Bearer <YOUR-API-TOKEN>" \
+    "http://localhost/api/v1/nginx/clear-cache"
+```
+
+<!-- tabs:end -->
+
+### Update nginx proxies
+
+<!-- tabs:start -->
+
+#### **JavaScript**
+
+```javascript
+const res = await api.call( "/v1/nginx/update-proxies", app_name, app_service_name, update_id, proxies? );
+```
+
+#### **Shell**
+
+```sh
+curl \
+    -H "Authorization: Bearer <YOUR-API-TOKEN>" \
+    "http://localhost/api/v1/nginx/update-proxies"
+```
+
+<!-- tabs:end -->
+
+- `app_name` {string}
+
+<details>
+    <summary>JSON schema</summary>
+
+<!-- tabs:start -->
+
+#### **JSON**
+
+```json
+{
+    "type": "string",
+    "format": "kebab-case"
+}
+```
+
+#### **YAML**
+
+```yaml
+type: string
+format: kebab-case
+```
+
+<!-- tabs:end -->
+
+</details>
+
+- `app_service_name` {string}
+
+<details>
+    <summary>JSON schema</summary>
+
+<!-- tabs:start -->
+
+#### **JSON**
+
+```json
+{
+    "type": "string",
+    "format": "kebab-case"
+}
+```
+
+#### **YAML**
+
+```yaml
+type: string
+format: kebab-case
+```
+
+<!-- tabs:end -->
+
+</details>
+
+- `update_id` {integer}
+
+<details>
+    <summary>JSON schema</summary>
+
+<!-- tabs:start -->
+
+#### **JSON**
+
+```json
+{
+    "type": "integer"
+}
+```
+
+#### **YAML**
+
+```yaml
+type: integer
+```
+
+<!-- tabs:end -->
+
+</details>
+
+- `proxies?`
+
+<details>
+    <summary>JSON schema</summary>
+
+<!-- tabs:start -->
+
+#### **JSON**
+
+```json
+{
+    "anyOf": [
+        {
+            "type": "null"
+        },
+        {
+            "type": "object",
+            "propertyNames": {
+                "type": "string",
+                "format": "kebab-case"
+            },
+            "additionalProperties": {
+                "type": "object",
+                "properties": {
+                    "upstreamPort": {
+                        "type": "integer",
+                        "format": "ip-port"
+                    },
+                    "upstreamProxyProtocol": {
+                        "type": "boolean"
+                    },
+                    "serverNames": {
+                        "anyOf": [
+                            {
+                                "type": "null"
+                            },
+                            {
+                                "type": "string",
+                                "format": "nginx-server-name"
+                            },
+                            {
+                                "type": "array",
+                                "items": {
+                                    "type": "string",
+                                    "format": "nginx-server-name"
+                                },
+                                "uniqueItems": true
+                            }
+                        ]
+                    },
+                    "servers": {
+                        "type": "array",
+                        "minItems": 1,
+                        "items": {
+                            "type": "object",
+                            "properties": {
+                                "port": {
+                                    "type": "integer",
+                                    "format": "ip-port"
+                                },
+                                "type": {
+                                    "enum": [
+                                        "http",
+                                        "tcp",
+                                        "udp"
+                                    ]
+                                },
+                                "proxyProtocol": {
+                                    "type": "boolean"
+                                },
+                                "ssl": {
+                                    "type": "boolean"
+                                },
+                                "maxBodySize": {
+                                    "type": "string",
+                                    "format": "digital-size"
+                                },
+                                "cacheEnabled": {
+                                    "type": "boolean"
+                                },
+                                "cacheBypass": {
+                                    "type": "boolean"
+                                },
+                                "httpsRedirectPort": {
+                                    "anyOf": [
+                                        {
+                                            "type": "null"
+                                        },
+                                        {
+                                            "type": "integer",
+                                            "format": "ip-port"
+                                        }
+                                    ]
+                                },
+                                "hstsMaxAge": {
+                                    "anyOf": [
+                                        {
+                                            "type": "null"
+                                        },
+                                        {
+                                            "type": "string",
+                                            "format": "interval"
+                                        }
+                                    ]
+                                },
+                                "hstsSubdomains": {
+                                    "type": "boolean"
+                                }
+                            },
+                            "additionalProperties": false,
+                            "required": [
+                                "port"
+                            ]
+                        }
+                    }
+                },
+                "additionalProperties": false,
+                "required": [
+                    "upstreamPort",
+                    "servers"
+                ]
+            }
+        }
+    ]
+}
+```
+
+#### **YAML**
+
+```yaml
+anyOf:
+  - type: "null"
+  - type: object
+    propertyNames:
+      type: string
+      format: kebab-case
+    additionalProperties:
+      type: object
+      properties:
+        upstreamPort:
+          type: integer
+          format: ip-port
+        upstreamProxyProtocol:
+          type: boolean
+        serverNames:
+          anyOf:
+            - type: "null"
+            - type: string
+              format: nginx-server-name
+            - type: array
+              items:
+                type: string
+                format: nginx-server-name
+              uniqueItems: true
+        servers:
+          type: array
+          minItems: 1
+          items:
+            type: object
+            properties:
+              port:
+                type: integer
+                format: ip-port
+              type:
+                enum:
+                  - http
+                  - tcp
+                  - udp
+              proxyProtocol:
+                type: boolean
+              ssl:
+                type: boolean
+              maxBodySize:
+                type: string
+                format: digital-size
+              cacheEnabled:
+                type: boolean
+              cacheBypass:
+                type: boolean
+              httpsRedirectPort:
+                anyOf:
+                  - type: "null"
+                  - type: integer
+                    format: ip-port
+              hstsMaxAge:
+                anyOf:
+                  - type: "null"
+                  - type: string
+                    format: interval
+              hstsSubdomains:
+                type: boolean
+            additionalProperties: false
+            required:
+              - port
+      additionalProperties: false
+      required:
+        - upstreamPort
+        - servers
 ```
 
 <!-- tabs:end -->
